# gcode-lib

./: CLAUDE.md  README.md  gcode_lib.py  pyproject.toml
.github/workflows/: tests.yml
docs/: api-reference.md  bed-placement.md  binary-bgcode.md  loading-and-saving.md  presets.md  prusaslicer-cli.md  state-tracking.md  statistics.md  transforms.md  utilities.md
gcode_lib/: __init__.py  _bgcode.py  _constants.py  _io.py  _parsing.py  _presets.py  _prusalink.py  _prusaslicer.py  _state.py  _transforms.py  _types.py
tests/: 3DBenchy_0.6n_0.32mm_FLEX_COREONE_32m.bgcode  3DBenchy_0.6n_0.32mm_FLEX_COREONE_32m.gcode  test_gcode_lib_extensions.py  test_gcode_lib_ini.py  test_gcode_lib_integration.py  test_gcode_lib_io.py  test_gcode_lib_parsing.py  test_gcode_lib_printer_gcode.py  test_gcode_lib_prusalink.py  test_gcode_lib_slicer_helpers.py  test_gcode_lib_state.py  test_gcode_lib_stats.py  test_gcode_lib_thumbnails.py  test_gcode_lib_transforms.py
